# fulfulde-translator

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  test_translator.py
data/: adamawa_covid_english_fulfulde.jsonl  adamawa_english_fulfulde_french_base.jsonl  adamawa_english_fulfulde_french_fub.tsv  adamawa_health_english_fulfulde_french.jsonl  adamawa_linjila_english_fulfulde_modern_start.jsonl  all.en-fuv.tmx  corps_sante_english_fulfulde_french_fub.tsv  dialect_mappings.json  linjila_fulfulde_fub.txt
examples/: translate_example.py
models/nllb_en_ff_2806/: tokenizer_config.json
models/nllb_ff_en_pod/: README.md
models/nllb_ff_en_v0/: adapter_config.json
research/: adamawa_english_fulfulde_french_fub.jsonl  alpaca_instruction_tuned.jsonl  assistant.py  explore_datasets.ipynb  explore_finetune.ipynb  finetune_pythia70m.ipynb  grammar_rules.py  prompts.json  trials.ipynb  trials.py
research/langchain/: agents.ipynb  basics.ipynb  chains.ipynb  evaluation.ipynb  lcel.ipynb  memory.ipynb  qa.ipynb
research/script/: extract_text_from_pdf.py
script/: extract_language.py  trials.py
scripts/: biblical_to_modern_english.py  collection.md  convert_health_corpus.py  convert_tsv_to_jsonl.py  download_english_fulfulde.py  filter_errors_jsonl.py  notes.md  run_training.sh  run_ui.sh  tmx_to_jsonl.py  train.py  train_hf_spaces.sh  train_mps.sh  train_runpod.sh  translate.py  translate.sh
src/: __init__.py
src/config/: training_config.yaml
src/data/: dataset_utils.py
src/distillation/: distill.py
src/evaluation/: eval_metrics.py  evaluate_model.py
src/inference/: translate.py  translator.py
src/models/: model_utils.py
src/tokenization/: tokenizer_utils.py
src/training/: train.py
streamlit_ui/: app.py  requirements.txt
streamlit_ui/config/: settings.py
streamlit_ui/core/: correction_logger.py  preference_tracker.py  translator.py
streamlit_ui/ui/: layout.py  translator_controls.py  translator_output.py
streamlit_ui/utils/: jsonl_utils.py
tests/: test_dataset.py  test_tokenizer.py  test_train.py
wandb/: latest-run
wandb/run-20250602_132937-87iy5vu5/: run-87iy5vu5.wandb
wandb/run-20250602_133148-2g9vc1m2/: run-2g9vc1m2.wandb
(+90 files in other folders)
