[project]
name = "fulfulde-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "Isma-Ilou Sadou",email = "ismailou.sa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "transformers (>=4.48.3,<5.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "huggingface-hub (>=0.28.1,<0.29.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
